5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1637_2447.log
== TEST (2019-04-09 10:49:55) 
-- CODE:
preco=float(input());
pag=float(input());

if(preco>pag):
	calc=preco-pag
	calc1=round(calc,2);
	print("falta "+calc);
if(preco<=pag):
   calc=pag-preco;
	calc1=round(calc,2);
	print("Troco de "+calc1);

	
	
-- ERROR:
File "XXXX", line 10
    calc1=round(calc,2);
                       ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:50:34) 
-- CODE:
preco=float(input());
pag=float(input());

if(preco>pag):
	calc=preco-pag
	calc1=round(calc,2);
	print("falta "+calc);
if(preco<=pag):
   calc=pag-preco;
	calc1=round(calc,2);
	print("Troco de "+calc1);

	
	
-- ERROR:
File "XXXX", line 10
    calc1=round(calc,2);
                       ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:52:33) 
-- CODE:
preco=float(input());
pag=float(input());

if(preco>pag):
	calc=preco-pag
	calc1=round(calc,2);
	print("falta "+calc);
if(preco<=pag):
	calc=pag-preco;
	calc1=round(calc,2);
	print("Troco de "+calc1);

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print("falta "+calc);
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:52:57) 
-- CODE:
preco=float(input());
pag=float(input());

if(preco>pag):
	calc=preco-pag
	calc1=round(calc,2);
	print("falta "+calc);
if(preco<=pag):
	calc=pag-preco;
	calc1=round(calc,2);
	print("Troco de "+calc1);

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print("falta "+calc);
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:53:06) 
-- CODE:
preco=float(input());
pag=float(input());

if(preco>pag):
	calc=preco-pag
	calc1=round(calc,2);
	print("falta "+calc);
if(preco<=pag):
	calc=pag-preco;
	calc1=round(calc,2);
	print("Troco de "+calc1);

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print("falta "+calc);
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:53:26) 
-- CODE:
preco=float(input());
pag=float(input());

if(preco>pag):
	calc=preco-pag
	calc1=round(calc,2);
	print("falta "calc1);
if(preco<=pag):
	calc=pag-preco;
	calc1=round(calc,2);
	print("Troco de "calc1);

	
	
-- ERROR:
File "XXXX", line 7
    print("falta "calc1);
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:53:39) 
-- CODE:
preco=float(input());
pag=float(input());

if(preco>pag):
	calc=preco-pag
	calc1=round(calc,2);
	print("falta ",calc1);
if(preco<=pag):
	calc=pag-preco;
	calc1=round(calc,2);
	print("Troco de ",calc1);

	
	
-- OUTPUT:
falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:54:02) 
-- CODE:
preco=float(input());
pag=float(input());

if(preco>pag):
	calc=preco-pag
	calc1=round(calc,2);
	print("falta ",calc1);
if(preco<=pag):
	calc=pag-preco;
	calc1=round(calc,2);
	print("Troco de ",calc1);

	
	
-- EXECUTION TIME:
0.199751
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:54:09) 
-- CODE:
preco=float(input());
pag=float(input());

if(preco>pag):
	calc=preco-pag
	calc1=round(calc,2);
	print("falta",calc1);
if(preco<=pag):
	calc=pag-preco;
	calc1=round(calc,2);
	print("Troco de",calc1);

	
	
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:54:25) 
-- CODE:
preco=float(input());
pag=float(input());

if(preco>pag):
	calc=preco-pag
	calc1=round(calc,2);
	print("Falta",calc1);
if(preco<=pag):
	calc=pag-preco;
	calc1=round(calc,2);
	print("Troco de",calc1);

	
	
-- EXECUTION TIME:
0.139592
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
